@@ -1,3 +1,7 @@
+2015-03-04  Jean-Louis Martineau <martineau@zmanda.com>
+	* common-src/conffile.c: Fix parsing dump-selection (remove append).
+	* man/xml-source/amanda.conf.5.xml: Document change.
+
 2015-02-26  Jean-Louis Martineau <martineau@zmanda.com>
 	* common-src/conffile.c (config_print_errors_as_message): Fix message.
 
